# squadron

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVLOG.md  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: python.md  review-code.md
.github/workflows/: ci.yml
commands/sq/: auth-status.md  auth.md  list.md  review-arch.md  review-code.md  review-slice.md  review-tasks.md  review.md  run-slice.md  run.md  shutdown.md  spawn.md  summary.md  task.md
docs/: PIPELINES.md
project-documents/: DEVLOG.md
src/squadron/: __init__.py
tests/: conftest.py  test_providers.py  test_smoke.py
tests/cli/: test_auth.py  test_install_commands.py  test_model_list.py  test_models.py  test_pools_command.py  test_review_format.py  test_review_profile.py  test_review_resolve.py  test_review_save.py  test_summary_instructions.py
tests/config/: conftest.py  test_keys.py
tests/integrations/: test_context_forge.py
tests/models/: test_aliases.py
tests/pipeline/: conftest.py  test_action_registry.py  test_cli_integration.py  test_compact_compose_integration.py  test_compact_integration.py  test_compact_render.py  test_dispatch.py  test_emit.py  test_environment_detection.py  test_executor.py  test_executor_integration.py  test_executor_loop_body.py  test_loader.py  test_loader_integration.py  test_loop_validation.py  test_models.py  test_pool_integration.py  test_prompt_only_integration.py  test_prompt_renderer.py  test_resolver.py  test_resolver_pools.py  test_schema.py  test_sdk_integration.py  test_sdk_session.py  test_sdk_wiring.py  test_state.py  test_state_integration.py  test_step_registry.py  test_summary_context.py  test_summary_integration.py  test_summary_oneshot.py  test_summary_render.py  test_validate_pipeline.py
tests/providers/: test_auth_resolution.py  test_capabilities.py  test_loader.py
tests/review/: conftest.py  test_builtin_arch.py  test_builtin_code.py  test_builtin_tasks.py  test_cli_review.py  test_config_cwd.py  test_content_injection.py  test_git_utils.py  test_model_resolution.py  test_models.py  test_parsers.py  test_persistence.py  test_review_client.py  test_review_file.py  test_rules.py  test_rules_module.py  test_template_inputs.py  test_templates.py  test_verbosity.py  (+1 more)
(+417 files in other folders)
