[project]
name = "squadron-ai"
version = "0.2.7"
description = "Multi-agent squadron framework"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40.0",
    "typer[all]>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-adk>=0.1.0",
    "mcp>=1.0.0",
    "claude-agent-sdk>=0.1.38",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
]

[project.scripts]
sq = "squadron.cli.app:app"
squadron = "squadron.cli.app:app"

[project.urls]
Repository = "https://github.com/ecorkran/squadron"
Documentation = "https://github.com/ecorkran/squadron/blob/main/README.md"
Issues = "https://github.com/ecorkran/squadron/issues"

[project.optional-dependencies]
codex = [
    "codex-app-server-sdk @ git+https://github.com/openai/codex.git#subdirectory=sdk/python",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squadron"]

[tool.hatch.build.targets.wheel.force-include]
"commands" = "squadron/commands"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]
